methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:42: error: only classes can have declared but undefined members
  def remonterLigne 
      ^